--- a/index.htm
+++ b/index.htm
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Lorem ipsum dolor sit, amet consectetur adipisicing elit. In, magni!</h1>
+    <footer>New footer added</footer>
 </body>
 </html>
