minor chages have been made by andrew tate

--- a/index.htm
+++ b/index.htm
@@ -7,6 +7,14 @@
 </head>
 <body>
     <h1>Lorem ipsum dolor sit, amet consectetur adipisicing elit. In, magni!</h1>
-    <footer>New footer added</footer>
+    <footer>
+        <ul>
+            <li><a href="#contacts">Contacts</a></li>
+            <li><a href="#customer">Customer</a></li>
+            <li><a href="#support">Support</a></li>
+            <li><a href="#terms">Terms & Conditions</a></li>
+        </ul>
+        <p>&copy; 2023 My First Git App. All rights reserved.</p>
+    </footer>
 </body>
 </html>
